--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "contextual-sidecar",
 	"name": "Contextual Sidecar",
-	"description": "A plugin that enables context-dependent sidecar panels in Obsidian.",
+	"description": "Add a context-dependent sidecar panel.",
 	"author": "Matthew Turk",
 	"authorUrl": "https://matthewturk.github.io/",
 	"version": "0.2.0",
